# pro-room

./: .gitignore  README.md  compose.yaml  important-doc.txt  livekit.yaml
server/: .env.example  Cargo.toml
server/.sqlx/: query-04726161329c66f3ee35bcbbb391f353d2155a79c475240756c697a80c410886.json  query-0739e34b450f5b92a245850d6eb455d8ac4577f0741699b055adf2cbcf7ca790.json  query-160dc05f98c0e12fac25a9ea39423bcab4529b2fc30080bc2225fc594f3968c9.json  query-225d5053e2225a3c2a5cf1984499aebe82b0d3ee530fca57bcfd8284980b657e.json  query-226e6846bdc7d75785b3ac719b3a9e8e538fcb6ef8e1236932e23dd4792795bf.json  query-2599dc7c17e140e5250a7fe7fcf894fc1efaf880f1d83d8174e3262b24ec831a.json  query-26a14666ab9e799cffa62c38f2c7f1aac4420118a7eb7ea4e51dd732ad5873d5.json  query-2a04280c6193b3afbbd6720fd4652bdfbbc33f83e7b32982638a744507c11998.json  query-35b145f5ddad9334524b792ede38dbec4084cee2b6bd34fd812f880ebd034ed7.json  query-4061e80cf68728f17a064a9dd4667f1ba6d2566065b583259688f0ecd5591f21.json  query-409c30fb94ed02de2ab11719557203794d24746b5486f82102cb87a3d433748d.json  query-43023573b0cc6107e69a9f81479767f49d1d25e647811772846826d797a601b1.json  query-43027bc98bcd5b35412746827cdb523896a78915fb4e643b86150e57626c9a1f.json  query-48ac164f4874492b36f9539f1115d09bfa32298280cc0ef446e91ed084ff1f52.json  query-506f6983f372a2b2c19638750dca514b425f4dd1289fe43fedd3c6efe16498cc.json  query-6036d384612fbc72261bc0a2481f387dd2785541b810a1ba7f670af230593df9.json  query-67a85ce54cf2c7c4b8c2e9a12f4467d880aede13d46b5d8b314213c43310f7b7.json  query-780556e46140dd1c1d9385ff28e8114dbb517fd075bba227d471d8a70a1186fc.json  query-782abd527384670ddd63264ffdafafa7b51026627cbfb320c414339e80ad5294.json  query-8126d63e542a2a1344e802433de9190bfd60fbb8b8ed660d98863b09c21ec6dd.json  query-92e99ec32674aafaa9e3acfa411248e0b944d8fe298c7498e01c8354510d1f39.json  query-960ce6f971e7da1f967373a54bd65ba57a9339275a33cd51fe3201d562d04c23.json  query-99935cab3ddc583c3d8f6a1a2705ab585e072fe79795347509ad6cb0ea642eff.json  query-a777b642240924836eb852226e9fe1c8afd4b44a045862dae640f3df2cfd4f8c.json  query-accce205e7776d52e9ab12c43877b0ec9d0e2d873d7f4dc21e8c42445c03c78c.json  query-afe5c8b1f7864ff287030f8426f356732a5e4b86f21c2032040ca043a7b0e6f3.json  query-b5246609f7b144653d003ed70e9cb45541f65f4f1d65dc9e121a3fa46054e25d.json  query-b67f2137efb8ed3374400dc88dcd1acf44b2331ce76eea57d754ef57b6cbdc0c.json  query-b76c91c6a28945d6463ceb0e9187a7d8a04ff79aa2c0ae25c20a4e06596b81fd.json  query-b84e2606661d583150eaed5852e0df5936e2543996665e07889b657b2d6d955c.json  query-bd7734ce47a17f177f9dde9c52cf8bb691d11356dfde263c1a2b3cfdabd89745.json  (+13 more)
server/migrations/: 0001_identity.sql  (+13 more)
(+320 files in other folders)
