[workspace]
resolver = "3"
members = ["crates/domain", "crates/authz", "crates/server"]

[workspace.package]
edition = "2024"
rust-version = "1.94"
license = "MIT"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
domain = { path = "crates/domain" }
authz = { path = "crates/authz" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
