[package]
name = "server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "server"

[lints]
workspace = true

[dependencies]
domain = { workspace = true }
authz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.8.9", features = ["macros", "ws"] }
axum-extra = { version = "0.12.6", features = ["cookie", "typed-header"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["cors", "trace", "catch-panic"] }
futures-util = "0.3.32"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "postgres", "uuid", "time", "json", "macros", "migrate"] }
fred = { version = "10", features = ["subscriber-client"] }
argon2 = "0.5.3"
sha2 = "0.11.0"
base64 = "0.22.1"
jsonwebtoken = "10.4.0"
dotenvy = "0.15.7"
url = "2.5.8"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
getrandom = "0.4.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "charset", "http2"] }
